# PLC_Assigment1

./: README.md  pyproject.toml
src/example/: main.py
src/example/components/: lexica.py  main.ui  memory.py  parsers.py  ui_main.py
src/example/components/ast/: statement.py
